# OpenGL-Pracice

./: Cargo.toml
cpp/: .gitignore  CMakeLists.txt  SimpleFragmentShader.fragmentshader  main.cpp  run.bat  run.sh
cpp/common/: controls.cpp  shader.cpp  shader.hpp  texture.hpp
gl/: Cargo.toml  Makefile  main.cpp  program
gl/src/: main.rs
ln/: Cargo.toml  main.cpp
ln/lib/gl/: Cargo.toml
ln/src/: main.rs  render_gl.rs  vert.glsl
ray/: main  main.cpp  run.sh
ray/gameplay/: player.cpp  player.h
rs/: Cargo.toml
rs/src/: helper.rs  main.rs
sdl/: Makefile  main  main.cpp
src/: helper.rs  main.rs
vk/: Cargo.toml  compile.sh
vk/src/: main.rs
wgpu/: Cargo.toml
wgpu/src/: main.rs  shader.wgsl
